[package]
name = "max485"
version = "0.1.0"
edition = "2021"
description = "A simple embedded-hal driver for operating the MAX485 uart to rs485 module in half duplex mode."
keywords = ["no-std", "driver", "embedded-hal", "rs485", "serial"]
categories = ["embedded", "hardware-support", "no-std"]
repository = "https://github.com/josfemova/max485"
documentation= "https://docs.rs/crate/max485/"
license = "MIT OR Apache-2.0"
readme = "README.md"
authors = ["José Morales <josfemova@gmail.com>"]


[dependencies]
embedded-hal = "0.2"
nb = "1.0"
